[metadata]
name = cdfutils
version = attr: cdfutils.version
description = A general utility library of miscellaneous functions and classes
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/cdfarrow/cdfutils/wiki
license = "GPL-2.0-or-later"
license_files = LICENSE.txt

author = Craig Farrow

platforms = 
    Windows
    Linux
    
classifiers = 
        Intended Audience :: Developers
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        Programming Language :: Python :: 3.13

[options]
python_requires = >=3.6
